Fix margin bottom of h1>strong on mobile screen

--- a/ktc-web/scss/_merchant-inner-responsive.scss
+++ b/ktc-web/scss/_merchant-inner-responsive.scss
@@ -127,6 +127,10 @@
 
     h1 {
       font-size: 20px;
+
+      strong {
+        margin-bottom: 0;
+      }
     }
 
     h2 {
